--- a/index.html
+++ b/index.html
@@ -10,7 +10,35 @@
 </head>
 
 <body>
-  <h1>Welcome World!!</h1>
+  <header>
+    <img src="./img//home/logo.jpg" alt="">
+    <img src="./img//home/perfil_01.png" alt="">
+    <div class="contact-info">
+      <span>Fale com a Déia</span>
+      <span>(19) 98143-2030</span>
+      <div class="social-icons">7
+        <a href="#">
+          <img src="./img/instagram.svg" alt="">
+        </a>
+        <a href="#">
+          <img src="./img/instagram.svg" alt="">
+        </a>
+        <a href="#">
+          <img src="./img/instagram.svg" alt="">
+        </a>
+      </div>
+    </div>
+  </header>
+  <nav>
+    <ul>
+      <li>HOME</li>
+      <li>SOBRE</li>
+      <li>SERVIÇOS</li>
+      <li>PORTFÓLIO</li>
+      <li>DICAS</li>
+      <li>ORÇAMENTO</li>
+    </ul>
+  </nav>
 </body>
 
 </html>
