--- a/index.html
+++ b/index.html
@@ -61,10 +61,22 @@
     <!-- <h1>Welcome to my<span>Portfolio</span></h1> -->
   </div>
 
+  <section class="intro">
+    <div class="intro-right">
+      <img src="img/home/perfil_03.png" alt="A person">
+    </div>
+    <div class="intro-middle">
+      <img src="img/home/perfil_02.png" alt="A person">
+    </div>
+    <div class="intro-left">
+      <img src="img/home/perfil_01.png" alt="A person">
+    </div>
+  </section>
+
   <section id="about" class="about-me">
-    <img class="about-img" src="img/joe-portfolio.png" alt="A picture of Joe Portfolio">
-    <h1 class="about-title">Albert Portfolio</h1>
-    <h2 class="about-subtitle">FrontEnd Developer</h2>
+    <img class="about-img" src="img/cursos/cursos_01.jpg" alt="A picture of a kitchen">
+    <h1 class="about-title">Andreia Salustiano</h1>
+    <h2 class="about-subtitle">Personal Organizer</h2>
     <div class="about-text">
       <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
         tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
@@ -149,7 +161,7 @@
 
       <!-- Portfolio Item 2 -->
       <figure class="portfolio-item">
-        <img src="img/portfolio-02.jpg" alt="portfolio item">
+        <img src="img/banheiro/banheiro_01.jpg" alt="portfolio item">
         <figcaption class="small">
           <h2 class="portfolio-title">Banheiro</h2>
           <p class="portfolio-desc">Trabalhos de organização em banheiros</p>
@@ -167,57 +179,31 @@
 
           <div class="portfolio-header header-two">
             <div class="portfolio-title-box">
-              <h2 class="portfolio-title">Nome do Projeto 2</h2>
+              <h2 class="portfolio-title">Banheiro</h2>
               <p class="portfolio-subtitle">Descrição vai Aqui</p>
             </div>
           </div>
           <!-- /portfolio-header -->
           <div class="portfolio-content">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-              tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-              veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-              commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-              velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-              occaecat cupidatat non proident.</p>
-            <img class="portfolio-full-width" src="img/portfolio-02.jpg" alt="an image">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-              tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-              veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-              commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-              velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-              occaecat cupidatat non proident.</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-              tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-              veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-              commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-              velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-              occaecat cupidatat non proident.</p>
-            <img class="portfolio-pull-left" src="img/portfolio-02.jpg" alt="an image">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-              tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-              veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-              commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-              velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-              occaecat cupidatat non proident.</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-              tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-              veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-              commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-              velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-              occaecat cupidatat non proident.</p>
-            <img class="portfolio-pull-right" src="img/portfolio-02.jpg" alt="an image">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-              tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-              veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-              commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-              velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-              occaecat cupidatat non proident.</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-              tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-              veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-              commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-              velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-              occaecat cupidatat non proident.</p>
+            <img src="img/banheiro/banheiro_02.jpg" alt="an image">
+            <img src="img/banheiro/banheiro_03.jpg" alt="an image">
+            <img src="img/banheiro/banheiro_04.jpg" alt="an image">
+            <img src="img/banheiro/banheiro_05.jpg" alt="an image">
+            <img src="img/banheiro/banheiro_06.jpg" alt="an image">
+            <img src="img/banheiro/banheiro_07.jpg" alt="an image">
+            <img src="img/banheiro/banheiro_08.jpg" alt="an image">
+            <img src="img/banheiro/banheiro_09.jpg" alt="an image">
+            <img src="img/banheiro/banheiro_10.jpg" alt="an image">
+            <img src="img/banheiro/banheiro_11.jpg" alt="an image">
+            <img src="img/banheiro/banheiro_12.jpg" alt="an image">
+            <img src="img/banheiro/banheiro_13.jpg" alt="an image">
+            <img src="img/banheiro/banheiro_14.jpg" alt="an image">
+            <img src="img/banheiro/banheiro_15.jpg" alt="an image">
+            <img src="img/banheiro/banheiro_16.jpg" alt="an image">
+            <img src="img/banheiro/banheiro_17.jpg" alt="an image">
+            <img src="img/banheiro/banheiro_18.jpg" alt="an image">
+            <img src="img/banheiro/banheiro_19.jpg" alt="an image">
+            <img src="img/banheiro/banheiro_20.jpg" alt="an image">
           </div>
         </div>
         <!-- /modal -->
@@ -225,9 +211,9 @@
 
       <!-- Portfolio Item 3 -->
       <figure class="portfolio-item">
-        <img src="img/portfolio-03.jpg" alt="portfolio item">
+        <img src="img/closet/closet_01.jpg" alt="portfolio item">
         <figcaption>
-          <h2 class="portfolio-title">Nome do Projeto</h2>
+          <h2 class="portfolio-title">Closet</h2>
           <p class="portfolio-desc">Uma curta descrição vai aqui</p>
           <a href="#" class="portfolio-link">Mais</a>
         </figcaption>
@@ -244,57 +230,40 @@
 
           <div class="portfolio-header header-three">
             <div class="portfolio-title-box">
-              <h2 class="portfolio-title">Nome do Projeto</h2>
+              <h2 class="portfolio-title">Closet</h2>
               <p class="portfolio-subtitle">Descrição vai Aqui</p>
             </div>
           </div>
           <!-- /portfolio-header -->
           <div class="portfolio-content">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-              tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-              veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-              commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-              velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-              occaecat cupidatat non proident.</p>
-            <img class="portfolio-full-width" src="img/portfolio-03.jpg" alt="an image">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-              tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-              veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-              commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-              velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-              occaecat cupidatat non proident.</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-              tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-              veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-              commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-              velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-              occaecat cupidatat non proident.</p>
-            <img class="portfolio-pull-left" src="img/portfolio-03.jpg" alt="an image">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-              tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-              veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-              commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-              velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-              occaecat cupidatat non proident.</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-              tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-              veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-              commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-              velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-              occaecat cupidatat non proident.</p>
-            <img class="portfolio-pull-right" src="img/portfolio-03.jpg" alt="an image">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-              tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-              veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-              commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-              velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-              occaecat cupidatat non proident.</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-              tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-              veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-              commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-              velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-              occaecat cupidatat non proident.</p>
+            <img src="img/closet/closet_02.jpg" alt="an image">
+            <img src="img/closet/closet_03.jpg" alt="an image">
+            <img src="img/closet/closet_04.jpg" alt="an image">
+            <img src="img/closet/closet_05.jpg" alt="an image">
+            <img src="img/closet/closet_06.jpg" alt="an image">
+            <img src="img/closet/closet_07.jpg" alt="an image">
+            <img src="img/closet/closet_08.jpg" alt="an image">
+            <img src="img/closet/closet_09.jpg" alt="an image">
+            <img src="img/closet/closet_10.jpg" alt="an image">
+            <img src="img/closet/closet_11.jpg" alt="an image">
+            <img src="img/closet/closet_12.jpg" alt="an image">
+            <img src="img/closet/closet_13.jpg" alt="an image">
+            <img src="img/closet/closet_14.jpg" alt="an image">
+            <img src="img/closet/closet_15.jpg" alt="an image">
+            <img src="img/closet/closet_16.jpg" alt="an image">
+            <img src="img/closet/closet_17.jpg" alt="an image">
+            <img src="img/closet/closet_18.jpg" alt="an image">
+            <img src="img/closet/closet_19.jpg" alt="an image">
+            <img src="img/closet/closet_20.jpg" alt="an image">
+            <img src="img/closet/closet_21.jpg" alt="an image">
+            <img src="img/closet/closet_22.jpg" alt="an image">
+            <img src="img/closet/closet_23.jpg" alt="an image">
+            <img src="img/closet/closet_24.jpg" alt="an image">
+            <img src="img/closet/closet_25.jpg" alt="an image">
+            <img src="img/closet/closet_26.jpg" alt="an image">
+            <img src="img/closet/closet_27.jpg" alt="an image">
+            <img src="img/closet/closet_28.jpg" alt="an image">
+            <img src="img/closet/closet_29.jpg" alt="an image">
           </div>
         </div>
         <!-- /modal -->
@@ -484,7 +453,7 @@
     <div class="social-icons">
       <a class="social-icon tooltip" href="https://www.linkedin.com/in/albertwillians/">
         <span class="tooltiptext">Linkedin</span>
-        <img src="img/linkedin.png" alt="linkedin">
+        <img src="img/instagram.svg" alt="linkedin">
       </a>
       <a class="social-icon tooltip" href="https://www.instagram.com/albertwillians/">
         <span class="tooltiptext">Instagram</span>
